2009-05-28 Fix axes_grid toolkit to work with spine patch by ADS. - JJL

2009-05-28 Applied fbianco's patch to handle scroll wheel events in
           the qt4 backend - DSD

2009-05-26 Add support for "axis spines" to have arbitrary location. -ADS

2009-05-20 Add an empty matplotlibrc to the tests/ directory so that running
           tests will use the default set of rcparams rather than the user's
           config. - RMM

2009-05-19 Axis.grid(): allow use of which='major,minor' to have grid
           on major and minor ticks. -ADS

2009-05-18 Make psd(), csd(), and cohere() wrap properly for complex/two-sided
           versions, like specgram() (SF #2791686) - RMM

2009-05-18 Fix the linespacing bug of multiline text (#1239682). See
           examples/pylab_examples/multiline.py -JJL

2009-05-18 Add *annotation_clip* attr. for text.Annotation class.
           If True, annotation is only drawn when the annotated point is
           inside the axes area. -JJL

2009-05-17 Fix bug(#2749174) that some properties of minor ticks are
           not conserved -JJL

2009-05-17 applied Michiel's sf patch 2790638 to turn off gtk event
           loop in setupext for pygtk>=2.15.10 - JDH

2009-05-17 applied Michiel's sf patch 2792742 to speed up Cairo and
           macosx collections; speedups can be 20x.  Also fixes some
           bugs in which gc got into inconsistent state

======================================================================

2008-05-17 Release 0.98.5.3 at r7107 from the branch - JDH

2009-05-13 An optional offset and bbox support in restore_bbox.
           Add animation_blit_gtk2.py. -JJL

2009-05-13 psfrag in backend_ps now uses baseline-alignment
           when preview.sty is used ((default is
           bottom-alignment). Also, a small api imporvement
           in OffsetBox-JJL

2009-05-13 When the x-coordinate of a line is monotonically
           increasing, it is now automatically clipped at